compiler/crates/beck-cli/tests/snapshots/ui__a_button_that_announces_nothing.snap
---
source: crates/beck-cli/tests/ui.rs
expression: "render(&edited(\"span(class=[\\\"flex-1\\\"], on_click=Toggle(id=t.id)): t.text\",\n\"button(on_click=Toggle(id=t.id))\"))"
---
error[B0220]: this button has no accessible name
  --> t.beck:114:25
    |
114 |                         button(on_click=Toggle(id=t.id))
    |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ nothing announces what it does
    |
  = note: a button is named by its own text, or by `aria_label=` when it has none — an icon button is the usual case
  = help: give it text, `aria_label="…"`, or `a11y_exempt="…"` with a reason
