compiler/crates/beck-cli/tests/snapshots/ui__a_fold_nobody_wrapped_in_durable.snap
---
source: crates/beck-cli/tests/ui.rs
expression: "render(&edited(\"todos: Signal[State] = durable(fold(\",\n\"todos: Signal[State] = (fold(\"))"
---
error[B0519]: `todos` folds the log's own stream, so it has to be `durable`
  --> t.beck:138:1
    |
138 | todos: Signal[State] = (fold(apply_event, State(todos={}), events))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ a fold over the log's stream, with nowhere to keep what it folds
    |
  = note: this stream is the log's, so its accumulator *is* a function of the log whatever it is called — every event on it was validated and recorded, and replay would reproduce this state whether or not the program asked for it. D30's rule is that ephemerality comes from the stream: a fold that should not survive a restart folds gestures, which are never recorded, rather than declining to persist events that were
  = help: `durable(fold(…))` if this is state the log should reproduce; `gestures(step, init)` if it is interface state one client keeps to itself
