compiler/crates/beck-cli/tests/snapshots/ui__a_fold_that_mints_an_id.snap
---
source: crates/beck-cli/tests/ui.rs
expression: "render(&edited(\"return s.with(todos=map_remove(s.todos, id))\",\n\"return s.with(todos=map_remove(s.todos, Id(value=uuid())))\"))"
---
error[B0402]: `apply_event` is a fold function, so it must be replay-pure
  --> t.beck:138:37
    |
138 | todos: Signal[State] = durable(fold(apply_event, State(todos={}), events))
    |                                     ^^^^^^^^^^^ performs {nondet}
    |
  --> t.beck:41:1
   |
41 | def apply_event(s: State, env: Envelope[Event]) -> State:
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ defined here
   |
  = note: replaying the log must reproduce the state bit for bit; time is data on the envelope (`env.at`) and identity is minted at the edge
