compiler/crates/beck-cli/tests/snapshots/ui__a_given_that_is_not_this_programs_log.snap
---
source: crates/beck-cli/tests/ui.rs
expression: "render(&format!(\"{}\\ntest \\\"a fixture, not a log\\\":\\n    given [1, 2, 3]\\n\",\nBASE))"
---
error[B0320]: list element mismatch: expected `Event`, found `Int`
  --> t.beck:181:12
    |
181 |     given [1, 2, 3]
    |            ^
    |

error[B0320]: list element mismatch: expected `Event`, found `Int`
  --> t.beck:181:15
    |
181 |     given [1, 2, 3]
    |               ^
    |

error[B0320]: list element mismatch: expected `Event`, found `Int`
  --> t.beck:181:18
    |
181 |     given [1, 2, 3]
    |                  ^
    |
