compiler/crates/beck-cli/tests/snapshots/ui__a_page_expectation_that_is_neither_contains_nor_a_snapshot.snap
---
source: crates/beck-cli/tests/ui.rs
expression: "render(&format!(\"{}\\ntest \\\"neither\\\":\\n    given []\\n    expect page resembles \\\"milk\\\"\\n\",\nBASE))"
---
error[B0120]: expected `contains` or `matches snapshot`
  --> t.beck:204:17
    |
204 |     expect page resembles "milk"
    |                 ^^^^^^^^^ unexpected here
    |
